feat: adiciona estrutura do topo do site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <!--Fonte Poppins-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/global.css">
     <title>LDI Lavagens</title>
 </head>
@@ -18,8 +20,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="https://gist.githubusercontent.com/maykbrito/f47569e32fb2b21f2ecc9f4c035c141f/raw/a45997404564112d7596fbb1b9cad5de5521927e/logo.svg"
-                        alt="logo">
+                    <img src="assets/images/logo-2.png" alt="logo" width="120" height="120">
                 </a>
             </div><!--logo-->
 
@@ -39,6 +40,29 @@
         </div><!--interface-->
     </header>
 
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>DÊ VIDA NOVA AO SEU ESTOFADO COM NOSSA MAGIA DE LIMPEZA PROFUNDA <span>.</span></h1>
+                        <p>Trabalhamos não apenas para limpar, mas para criar ambientes onde o conforto e a saúde se
+                            unem, elevando a qualidade de vida da sua família. Seu conforto e satisfação são nossa
+                            prioridade. Confie em nós para trazer a excelência em serviços de limpeza para o seu lar. </p>
+
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em contato</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="img-topo-site">
+                        <img src="assets/images/limpeza-de-sofa.png" alt="" height="250">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
