feat: estilização do topo do site

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="assets/images/logo-2.png" alt="logo" width="120" height="120">
+                    <img src="assets/images/logo-2.png" alt="logo" width="90" height="90">
                 </a>
             </div><!--logo-->
 
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Quem somos</a></li>
-                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Nossos Serviços</a></li>
                 </ul>
             </nav>
 
@@ -45,10 +45,10 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
-                        <h1>DÊ VIDA NOVA AO SEU ESTOFADO COM NOSSA MAGIA DE LIMPEZA PROFUNDA <span>.</span></h1>
+                        <h1>DÊ VIDA NOVA AO SEU ESTOFADO COM NOSSA MAGIA DE LIMPEZA PROFUNDA<span>.</span></h1>
                         <p>Trabalhamos não apenas para limpar, mas para criar ambientes onde o conforto e a saúde se
                             unem, elevando a qualidade de vida da sua família. Seu conforto e satisfação são nossa
-                            prioridade. Confie em nós para trazer a excelência em serviços de limpeza para o seu lar. </p>
+                            prioridade. Confie em nós para trazer a excelência em serviços de limpeza para o seu lar.</p>
 
                         <div class="btn-contato">
                             <a href="#">
@@ -60,6 +60,12 @@
                         <img src="assets/images/limpeza-de-sofa.png" alt="" height="250">
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="quem-somos">
+            <div class="interface">
+                
             </div>
         </section>
     </main>
