feat: cria estrutura e estilização da aba quem somos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                         <h1>DÊ VIDA NOVA AO SEU ESTOFADO COM NOSSA MAGIA DE LIMPEZA PROFUNDA<span>.</span></h1>
                         <p>Trabalhamos não apenas para limpar, mas para criar ambientes onde o conforto e a saúde se
                             unem, elevando a qualidade de vida da sua família. Seu conforto e satisfação são nossa
-                            prioridade. Confie em nós para trazer a excelência em serviços de limpeza para o seu lar.</p>
+                            prioridade. Confie em nós para trazer a excelência em serviços de limpeza para o seu lar.
+                        </p>
 
                         <div class="btn-contato">
                             <a href="#">
@@ -57,7 +58,7 @@
                         </div>
                     </div>
                     <div class="img-topo-site">
-                        <img src="assets/images/limpeza-de-sofa.png" alt="" height="250">
+                        <img src="assets/images/limpeza-sofa2.png" alt="" height="250">
                     </div>
                 </div>
             </div>
@@ -65,7 +66,30 @@
 
         <section class="quem-somos">
             <div class="interface">
-                
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="assets/images/cartoon-limpeza.png" alt="" width="300" height="300">
+                    </div>
+                    <div class="txt-sobre">
+                        <h2>QUEM SOMOS</h2>
+                        <p>Bem-vindo à LHI (Limpeza, Higienização e Impermeabilização), sua aliada dedicada ao cuidado
+                            excepcional dos seus espaços mais preciosos. Na busca por um lar mais saudável e
+                            confortável, encontrou a equipe comprometida da LHI. Somos mais do que uma empresa de
+                            serviços, somos artesãos da limpeza, especializados em transformar ambientes com nossa
+                            expertise em lavagem, higienização, impermeabilização, limpeza pós-obra e revitalização de
+                            tacos.
+                            <br>
+                            Na LHI, acreditamos que a verdadeira limpeza vai além do visual. Nossos serviços são
+                            projetados não apenas para deixar seus estofados reluzentes, mas para criar um espaço onde o
+                            frescor, o conforto e a saúde coexistem harmoniosamente. Confie em nós para proporcionar uma
+                            experiência única, cuidando não apenas do seu mobiliário, mas do bem-estar da sua família.
+                            <br>
+                            Explore nossos serviços e descubra como a LHI pode elevar o padrão de limpeza e cuidado para
+                            o seu lar. Estamos aqui para transformar seus espaços, renovar a vitalidade dos seus móveis
+                            e, acima de tudo, proporcionar a você a tranquilidade que vem de viver em um ambiente
+                            verdadeiramente limpo e acolhedor. Seu conforto é nossa missão.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
