feat: adiciona estrutura e estilização da aba nossos serviços

--- a/index.html
+++ b/index.html
@@ -92,6 +92,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="servicos">
+            <div class="interface">
+                <div class="txt-servicos">
+                    <h2>NOSSOS <span>SERVIÇOS</span></h2>
+                </div>
+                <div class="lista-servicos">
+                    <ul>
+                        <li>Lavagem de Estofados</li>
+                        <li>Impermeabilização</li>
+                        <li>Higienização</li>
+                        <li>Limpeza Pós Obra</li>
+                        <li>Raspagem de Tacos</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
