--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
                         <li>Raspagem de Tacos</li>
                     </ul>
                 </div>
+                <div class="img-servicos">
+                    <img src="assets/images/photo1.jpeg" alt="" width="400" height="400">
+                    <img src="assets/images/photo2.jpeg" alt="" width="400" height="400">
+                    <img src="assets/images/photo3.jpeg" alt="" width="400" height="400">
+                </div>
             </div>
         </section>
     </main>
