feat: adiciona orçamentos no menu

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Quem somos</a></li>
                     <li><a href="#">Nossos Serviços</a></li>
+                    <li><a href="#">Orçamento</a></li>
                 </ul>
             </nav>
 
