feat: adiciona e estiliza texto de descrição dos serviços

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                     <img src="assets/images/photo2.jpeg" alt="" width="400" height="400">
                     <img src="assets/images/photo3.jpeg" alt="" width="400" height="400">
                 </div>
+                <div class="descricao">
+                    <p>Na LHI (Limpeza, Higienização & Impermeabilização), seu estofado passará por um tratamento de limpeza profunda. Com o intuito de restaurar todas as fibras do tecidos, remover germes, impurezas, manchas e todo tipo de sujeira.
+                    <br>A LHI tem um processo de impermeabilização de estofados que prolonga a sua vida útil e conserva a aparência, deixando como novo. Também evita a proliferação de ácaros, fungos, germes e outros microrganismos invisíveis aos olhos.
+                    <br>A sujeira acumulada pode causar doenças respiratórias e afetar a qualidade do ar, além de afetar negativamente a imagem do seu ambiente.
+                    Não corra riscos! A nossa equipe especializada utiliza tecnologia avançada e produtos ecológicos para eliminar fungos, bactérias e sujeiras profundas dos seus estofados, garantindo um ambiente saudável, produtivo e com uma imagem impecável. </p>
+                </div>
             </div>
         </section>
     </main>
