feat: altera logo e adiciona estrutura do orçamento

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/global.css">
-    <title>LDI Lavagens</title>
+    <title>LHI - Lavagem, Higienização & Impermeabilização</title>
 </head>
 
 <body>
@@ -97,7 +97,7 @@
         <section class="servicos">
             <div class="interface">
                 <div class="txt-servicos">
-                    <h2>NOSSOS <span>SERVIÇOS</span></h2>
+                    <h2>NOSSOS SERVIÇOS</h2>
                 </div>
                 <div class="lista-servicos">
                     <ul>
@@ -118,6 +118,18 @@
                     <br>A LHI tem um processo de impermeabilização de estofados que prolonga a sua vida útil e conserva a aparência, deixando como novo. Também evita a proliferação de ácaros, fungos, germes e outros microrganismos invisíveis aos olhos.
                     <br>A sujeira acumulada pode causar doenças respiratórias e afetar a qualidade do ar, além de afetar negativamente a imagem do seu ambiente.
                     Não corra riscos! A nossa equipe especializada utiliza tecnologia avançada e produtos ecológicos para eliminar fungos, bactérias e sujeiras profundas dos seus estofados, garantindo um ambiente saudável, produtivo e com uma imagem impecável. </p>
+                </div>
+            </div>
+        </section>
+        
+        <section class="orcamento">
+            <div class="interface">
+                <div class="txt-orcamento">
+                    <h2>FAÇA JÁ O SEU ORÇAMENTO</h2>
+                    <p>Na LHI, a transparência é fundamental. Entendemos que cada cliente é único, e nossos serviços são personalizados para atender às suas necessidades específicas. Solicite agora um orçamento gratuito e sem compromisso. Nossa equipe especializada está pronta para oferecer a solução ideal para a limpeza e cuidado dos seus estofados, impermeabilização, higienização, limpeza pós-obra e raspagem de tacos. Valorizamos a sua satisfação e estamos aqui para tornar seus espaços impecáveis.</p>
+                </div>
+                <div class="orcamento-contato">
+                    
                 </div>
             </div>
         </section>
