--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/global.css">
     <title>LHI - Lavagem, Higienização & Impermeabilização</title>
 </head>
@@ -78,14 +79,13 @@
                             confortável, encontrou a equipe comprometida da LHI. Somos mais do que uma empresa de
                             serviços, somos artesãos da limpeza, especializados em transformar ambientes com nossa
                             expertise em lavagem, higienização, impermeabilização, limpeza pós-obra e revitalização de
-                            tacos.
-                            <br>
-                            Na LHI, acreditamos que a verdadeira limpeza vai além do visual. Nossos serviços são
+                            tacos.</p>
+                        <p> Na LHI, acreditamos que a verdadeira limpeza vai além do visual. Nossos serviços são
                             projetados não apenas para deixar seus estofados reluzentes, mas para criar um espaço onde o
                             frescor, o conforto e a saúde coexistem harmoniosamente. Confie em nós para proporcionar uma
                             experiência única, cuidando não apenas do seu mobiliário, mas do bem-estar da sua família.
-                            <br>
-                            Explore nossos serviços e descubra como a LHI pode elevar o padrão de limpeza e cuidado para
+                        </p>
+                        <p> Explore nossos serviços e descubra como a LHI pode elevar o padrão de limpeza e cuidado para
                             o seu lar. Estamos aqui para transformar seus espaços, renovar a vitalidade dos seus móveis
                             e, acima de tudo, proporcionar a você a tranquilidade que vem de viver em um ambiente
                             verdadeiramente limpo e acolhedor. Seu conforto é nossa missão.</p>
@@ -114,22 +114,42 @@
                     <img src="assets/images/photo3.jpeg" alt="" width="400" height="400">
                 </div>
                 <div class="descricao">
-                    <p>Na LHI (Limpeza, Higienização & Impermeabilização), seu estofado passará por um tratamento de limpeza profunda. Com o intuito de restaurar todas as fibras do tecidos, remover germes, impurezas, manchas e todo tipo de sujeira.
-                    <br>A LHI tem um processo de impermeabilização de estofados que prolonga a sua vida útil e conserva a aparência, deixando como novo. Também evita a proliferação de ácaros, fungos, germes e outros microrganismos invisíveis aos olhos.
-                    <br>A sujeira acumulada pode causar doenças respiratórias e afetar a qualidade do ar, além de afetar negativamente a imagem do seu ambiente.
-                    Não corra riscos! A nossa equipe especializada utiliza tecnologia avançada e produtos ecológicos para eliminar fungos, bactérias e sujeiras profundas dos seus estofados, garantindo um ambiente saudável, produtivo e com uma imagem impecável. </p>
+                    <p>Na LHI (Limpeza, Higienização & Impermeabilização), seu estofado passará por um tratamento de
+                        limpeza profunda. Com o intuito de restaurar todas as fibras do tecidos, remover germes,
+                        impurezas, manchas e todo tipo de sujeira.</p>
+                        <p>A LHI tem um processo de impermeabilização de estofados que prolonga a sua vida útil e
+                        conserva a aparência, deixando como novo. Também evita a proliferação de ácaros, fungos, germes
+                        e outros microrganismos invisíveis aos olhos.</p>
+                        <p>A sujeira acumulada pode causar doenças respiratórias e afetar a qualidade do ar, além de
+                        afetar negativamente a imagem do seu ambiente.
+                        Não corra riscos! A nossa equipe especializada utiliza tecnologia avançada e produtos ecológicos
+                        para eliminar fungos, bactérias e sujeiras profundas dos seus estofados, garantindo um ambiente
+                        saudável, produtivo e com uma imagem impecável.</p>
                 </div>
             </div>
         </section>
-        
+
         <section class="orcamento">
             <div class="interface">
-                <div class="txt-orcamento">
-                    <h2>FAÇA JÁ O SEU ORÇAMENTO</h2>
-                    <p>Na LHI, a transparência é fundamental. Entendemos que cada cliente é único, e nossos serviços são personalizados para atender às suas necessidades específicas. Solicite agora um orçamento gratuito e sem compromisso. Nossa equipe especializada está pronta para oferecer a solução ideal para a limpeza e cuidado dos seus estofados, impermeabilização, higienização, limpeza pós-obra e raspagem de tacos. Valorizamos a sua satisfação e estamos aqui para tornar seus espaços impecáveis.</p>
-                </div>
-                <div class="orcamento-contato">
-                    
+                <div class="flex">
+                    <div class="txt-orcamento">
+                        <h2>ENTRE EM CONTATO CONOSCO EM QUALQUER UMA DE NOSSAS REDES SOCIAIS E FAÇA JÁ O SEU ORÇAMENTO!</h2>
+                        <p>Na LHI, a transparência é fundamental. Entendemos que cada cliente é único, e nossos serviços são
+                        personalizados para atender às suas necessidades específicas. Solicite agora um orçamento
+                        gratuito e sem compromisso. Nossa equipe especializada está pronta para oferecer a solução ideal
+                        para a limpeza e cuidado dos seus estofados, impermeabilização, higienização, limpeza pós-obra e
+                        raspagem de tacos. Valorizamos a sua satisfação e estamos aqui para tornar seus espaços
+                        impecáveis.</p>
+
+                        <div class="btn-social">
+                            <a href="#"></a>
+                            <a href="#"></a>
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="img-orcamento">
+                        <img src="assets/images/cartoon-limpeza3.png" alt="" height="300">
+                    </div>
                 </div>
             </div>
         </section>
