feat: finaliza estrutura e estilzação do orçamento

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
                         gratuito e sem compromisso. Nossa equipe especializada está pronta para oferecer a solução ideal
                         para a limpeza e cuidado dos seus estofados, impermeabilização, higienização, limpeza pós-obra e
                         raspagem de tacos. Valorizamos a sua satisfação e estamos aqui para tornar seus espaços
-                        impecáveis.</p>
+                        impecáveis. Faça seu orçamento em uma de nossas redes sociais abaixo:</p>
 
                         <div class="btn-social">
-                            <a href="#"></a>
-                            <a href="#"></a>
-                            <a href="#"></a>
+                            <a href="https://api.whatsapp.com/send?phone=5511913355899&text=Olá,%20gostaria%20de%20fazer%20um%20orçamento" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
+                            <a href="https://www.instagram.com/almeidaleiva?igsh=ZzJiMW1sdGE3NXR2" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://www.facebook.com/leiva.almeida.79?mibextid=ZbWKwL" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
                         </div>
                     </div>
                     <div class="img-orcamento">
