feat: finaliza o footer do site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,14 +13,13 @@
     <link rel="stylesheet" href="assets/css/global.css">
     <title>LHI - Lavagem, Higienização & Impermeabilização</title>
 </head>
-
 <body>
 
     <header>
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="assets/images/logo-2.png" alt="logo" width="90" height="90">
+                    <img src="assets/images/logo-2.png" alt="Logotipo LHI" width="90" height="90">
                 </a>
             </div><!--logo-->
 
@@ -153,7 +151,28 @@
                 </div>
             </div>
         </section>
-    </main>
-</body>
 
+    </main>
+
+    <footer>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="logo-footer">
+                        <img src="assets/images/logo-2.png" alt="Logotipo LHI" width="90" height="90">
+                    </div>
+                    <div class="btn-social">
+                        <a href="https://api.whatsapp.com/send?phone=5511913355899&text=Olá,%20gostaria%20de%20fazer%20um%20orçamento" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
+                        <a href="https://www.instagram.com/almeidaleiva?igsh=ZzJiMW1sdGE3NXR2" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                        <a href="https://www.facebook.com/leiva.almeida.79?mibextid=ZbWKwL" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
+                    </div>
+            </div>
+            </div>
+            <div class="line-footer borda">
+                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:email@lhi.com">email@lhi.com</a></p>
+            </div>
+        </div>
+    </footer>
+
+</body>
 </html>
