--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/global.css">
+    <script src="assets/js/menu.js" defer></script>
     <title>LHI - Lavagem, Higienização & Impermeabilização</title>
 </head>
 <body>
@@ -37,6 +38,28 @@
                     <button>Contato</button>
                 </a>
             </div>
+
+            <div class="btn-abrir-menu">
+                <i class="bi bi-list"></i>
+            </div>
+
+            <div class="menu-mobile">
+                <div class="btn-fechar">
+                    <i class="bi bi-x-lg"></i>
+                </div>
+
+                <nav>
+                    <ul>
+                        <li><a href="#">Início</a></li>
+                        <li><a href="#">Quem somos</a></li>
+                        <li><a href="#">Nossos Serviços</a></li>
+                        <li><a href="#">Orçamento</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="overlay-menu"></div>
         </div><!--interface-->
     </header>
 
