--- a/index.html
+++ b/index.html
@@ -26,45 +26,45 @@
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Quem somos</a></li>
-                    <li><a href="#">Nossos Serviços</a></li>
-                    <li><a href="#">Orçamento</a></li>
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="#quem-somos">Quem somos</a></li>
+                    <li><a href="#servicos">Nossos Serviços</a></li>
+                    <li><a href="#orcamento">Orçamento</a></li>
                 </ul>
             </nav>
 
             <div class="btn-contato">
-                <a href="#">
+                <a href="#orcamento">
                     <button>Contato</button>
                 </a>
             </div>
 
-            <div class="btn-abrir-menu">
+            <div class="btn-abrir-menu" id="btn-menu">
                 <i class="bi bi-list"></i>
             </div>
 
-            <div class="menu-mobile">
+            <div class="menu-mobile" id="menu-mobile">
                 <div class="btn-fechar">
                     <i class="bi bi-x-lg"></i>
                 </div>
 
                 <nav>
                     <ul>
-                        <li><a href="#">Início</a></li>
-                        <li><a href="#">Quem somos</a></li>
-                        <li><a href="#">Nossos Serviços</a></li>
-                        <li><a href="#">Orçamento</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="#inicio">Início</a></li>
+                        <li><a href="#quem-somos">Quem somos</a></li>
+                        <li><a href="#servicos">Nossos Serviços</a></li>
+                        <li><a href="#orcamento">Orçamento</a></li>
+                        <li><a href="#orcamento">Contato</a></li>
                     </ul>
                 </nav>
             </div>
 
-            <div class="overlay-menu"></div>
+            <div class="overlay-menu" id="overlay-menu"></div>
         </div><!--interface-->
     </header>
 
     <main>
-        <section class="topo-do-site">
+        <section class="topo-do-site" id="inicio">
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
@@ -75,7 +75,7 @@
                         </p>
 
                         <div class="btn-contato">
-                            <a href="#">
+                            <a href="#orcamento">
                                 <button>Entre em contato</button>
                             </a>
                         </div>
@@ -87,7 +87,7 @@
             </div>
         </section>
 
-        <section class="quem-somos">
+        <section class="quem-somos" id="quem-somos">
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
@@ -115,7 +115,7 @@
             </div>
         </section>
 
-        <section class="servicos">
+        <section class="servicos" id="servicos">
             <div class="interface">
                 <div class="txt-servicos">
                     <h2>NOSSOS SERVIÇOS</h2>
@@ -150,7 +150,7 @@
             </div>
         </section>
 
-        <section class="orcamento">
+        <section class="orcamento" id="orcamento">
             <div class="interface">
                 <div class="flex">
                     <div class="txt-orcamento">
