--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <!--Fonte Poppins-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> <!--Bootstrap icons-->
+    <link rel="icon" href="assets/images/logo-2.png" sizes="32x32"> <!--Icone do site-->
     <link rel="stylesheet" href="assets/css/global.css">
     <script src="assets/js/menu.js" defer></script>
     <title>LHI - Lavagem, Higienização & Impermeabilização</title>
@@ -19,9 +18,7 @@
     <header>
         <div class="interface">
             <div class="logo">
-                <a href="#">
                     <img src="assets/images/logo-2.png" alt="Logotipo LHI" width="90" height="90">
-                </a>
             </div><!--logo-->
 
             <nav class="menu-desktop">
@@ -81,7 +78,7 @@
                         </div>
                     </div>
                     <div class="img-topo-site">
-                        <img src="assets/images/limpeza-sofa2.png" alt="" height="250">
+                        <img src="assets/images/cartoon-limpeza.png" alt="" height="250">
                     </div>
                 </div>
             </div>
@@ -91,7 +88,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="assets/images/cartoon-limpeza.png" alt="" width="300" height="300">
+                        <img src="assets/images/cartoon-limpeza2.png" alt="" width="300" height="300">
                     </div>
                     <div class="txt-sobre">
                         <h2>QUEM SOMOS</h2>
@@ -193,6 +190,7 @@
             </div>
             <div class="line-footer borda">
                 <p><i class="bi bi-envelope-fill"></i> <a href="mailto:email@lhi.com">email@lhi.com</a></p>
+                <p><i class="bi bi-code-slash"></i> <a href="https://www.linkedin.com/in/bhendon-soares/">Desenvolvido por: Bhendon Soares</a></p>
             </div>
         </div>
     </footer>
