refactor: adiciona blank no link do linkedin

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
             <div class="line-footer borda">
                 <p><i class="bi bi-envelope-fill"></i> <a href="mailto:email@lhi.com">email@lhi.com</a></p>
-                <p><i class="bi bi-code-slash"></i> <a href="https://www.linkedin.com/in/bhendon-soares/">Desenvolvido por: Bhendon Soares</a></p>
+                <p><i class="bi bi-code-slash"></i> <a href="https://www.linkedin.com/in/bhendon-soares/" target="_blank">Desenvolvido por: Bhendon Soares</a></p>
             </div>
         </div>
     </footer>
