--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
             </div>
             <div class="line-footer borda">
-                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:email@lhi.com">ljlimpezaejardinagem@gmail.com</a></p>
+                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:email@lhi.com">contato@lhilimpeza.com.br</a></p>
                 <p><i class="bi bi-code-slash"></i> <a href="https://www.linkedin.com/in/bhendon-soares/" target="_blank">Desenvolvido por: Bhendon Soares</a></p>
             </div>
         </div>
